# TaPL

./: .gitignore
Chapter22Reconstruction/: Makefile  README.md  tapl-recon.cabal
Chapter22Reconstruction/src/: Main.hs  Recon.hs  index.html
Chapter22Reconstruction/src/Recon/: Parse.hs  Recon.hs  Type.hs
Chapter22Reconstruction/test/: IntegrationSpec.hs  ParseSpec.hs  ReconSpec.hs  ReconSpec.hs.back
Chapter30/: List.agda  輪講メモ.txt
Chapter3Lang/src/: Main.hs
Chapter3LangLargeStepEvaluation/src/: Main.hs
Chapter3LangSmallStepEvaluation/src/: Main.hs
Chapter8/: Chapter8.cabal
Chapter9/: chapter9.cabal  stack.yaml
Chapter9/src/: Chapter9.hs
Chapter9/test/: EvalSpec.hs
Lang3/src/: Main.hs
Rust/: chapter-3_large-step-evaluation.rs  chapter-3_small-step-evaluation.rs
fullomega/: Setup.hs  fullomega.cabal  package.yaml  stack.yaml
fullomega/src/: Main.hs  SystemFOmega.hs
fullomega/src/SystemFOmega/: Eval.hs  Parse.hs  Type.hs
