name:                   tapl-recon
version:                0.1.0
author:                 Kazuki Okamoto <kazuki.okamoto@kakkun61.com>
maintainer:             Kazuki Okamoto <kazuki.okamoto@kakkun61.com>
license:                BSD3
build-type:             Simple
cabal-version:          >= 1.10

executable tapl-recon
  hs-source-dirs:       src
  main-is:              Main.hs
  build-depends:        base
                      , containers
                      , mtl
                      , transformers
  default-language:     Haskell2010
  ghc-options:          -Wall
