name:                   tapl-recon
version:                0.1.0
author:                 Kazuki Okamoto <kazuki.okamoto@kakkun61.com>
maintainer:             Kazuki Okamoto <kazuki.okamoto@kakkun61.com>
license:                BSD3
build-type:             Simple
cabal-version:          >= 1.10

library
  hs-source-dirs:       src
  exposed-modules:      Recon
  build-depends:        base
                      , containers
                      , mtl
                      , transformers
  default-language:     Haskell2010
  ghc-options:          -Wall

test-suite spec
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  ghc-options:      -Wall
  main-is:          Spec.hs
  other-modules:    ReconSpec
  build-depends:    base
                  , hspec >= 1.3
                  , tapl-recon
                  , containers
                  , mtl
                  , transformers
