name:                   tapl-recon
version:                0.1.0
author:                 Kazuki Okamoto <kazuki.okamoto@kakkun61.com>
maintainer:             Kazuki Okamoto <kazuki.okamoto@kakkun61.com>
license:                BSD3
build-type:             Simple
cabal-version:          >= 1.10

executable recon
  main-is:          src/Main.hs
  build-depends:    base
                  , tapl-recon
                  , containers
                  , text
  default-language: Haskell2010
  ghc-options:      -Wall

library
  hs-source-dirs:       src
  exposed-modules:      Recon
                      , Recon.Recon
                      , Recon.Parse
                      , Recon.Type
  build-depends:        base
                      , containers
                      , mtl
                      , transformers
                      , parsec
                      , text
                      , safe
  default-language:     Haskell2010
  ghc-options:          -Wall

test-suite spec
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  ghc-options:      -Wall
  main-is:          Spec.hs
  other-modules:    ParseSpec
  build-depends:    base
                  , hspec >= 1.3
                  , tapl-recon
                  , containers
                  , mtl
                  , transformers
                  , parsec
