name:                 chapter9
version:              0.1.0.0
synopsis:             
homepage:
author:               Kazuki Okamoto
maintainer:           
category:             
build-type:           Simple
cabal-version:        >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Chapter9
  build-depends:        base
                      , container
  default-language:     Haskell2010
  ghc-options:          -Wall

test-suite spec
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  ghc-options:      -Wall
  main-is:          Spec.hs
  other-modules:    EvalSpec
  build-depends:    base
                  , hspec >= 1.3
                  , chapter9
