name:                 fullomega
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Kazuki Okamoto
maintainer:           kazuki.okamoto@kakkun61.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable fullomega
  main-is:              src/Main.hs
  build-depends:        base,
                        containers,
                        text,
                        fullomega
  -- hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall


library
  hs-source-dirs:       src
  exposed-modules:      SystemFOmega,
                        SystemFOmega.Parse,
                        SystemFOmega.Type
  build-depends:        base,
                        mtl,
                        transformers,
                        containers,
                        parsec,
                        text,
                        safe
  default-language:     Haskell2010
  ghc-options:          -Wall
